Update to new spout api, add better checks for importing closes #326

--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
         <!-- Start of Spout -->
         <dependency>
             <groupId>org.getspout</groupId>
-            <artifactId>spoutapi</artifactId>
+            <artifactId>spoutpluginapi</artifactId>
             <version>dev-SNAPSHOT</version>
         </dependency>
         <!-- End of Spout -->
